--- a/style.css
+++ b/style.css
@@ -64,6 +64,20 @@ body{
     background-color: rgb(80, 77, 77);
 }
 
+.header a {
+  color: white;
+  text-decoration: none;
+  font-family: Lato,Arial,Helvetica,sans-serif;
+  display: flex;
+  font-size: 18px;
+  position: relative;
+  margin-top: 30px;
+  margin-left: 330px;
+  padding: 2px;
+}
+
+
+
 /*navigation menu*/
 
 .nav{
@@ -77,6 +91,7 @@ body{
 
 /* Dropdown Button */
 .dropbtn {
+    font-family: Lato,Arial,Helvetica,sans-serif;
     background-color: #313131;
     color: white;
     padding: 16px;
@@ -91,7 +106,7 @@ body{
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: white;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -106,7 +121,7 @@ body{
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
+  .dropdown-content :hover {background-color: #ddd;}
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {display: block;}
@@ -115,4 +130,106 @@ body{
   .dropdown:hover .dropbtn {
     color: black;  
     background-color: white;
+}
+
+
+/*carousel*/
+/*slidehow or carousel*/
+
+
+
+/* Slideshow container */
+.slideshow-container {
+  width: 100%;
+  height: 375px;
+  position: relative;
+  margin: auto;
+}
+
+.myslides img{
+  height: 375px;
+}
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 18px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  position: relative;
+  bottom: 45px;
+  display: inline-block;
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  
+  background-color: #bbb;
+  border-radius: 50%;
+  
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
